--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 openai==1.54.0
 requests==2.31.0
-edge-tts==6.1.12
+edge-tts>=7.0.0
 moviepy==1.0.3
 Pillow==10.4.0
 python-dotenv==1.0.0
 pydub==0.25.1
+tweepy>=4.14.0
